--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  matrix4_transform: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    
+
 flutter:
   assets:
     - assets/images/
