--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,20 @@
 name: rflutter_alert
-description: RFlutter Alert is super customizable and easy-to-use alert / popup dialogs for Flutter. You may create reusable alert styles or add buttons as much as you want with ease.
-version: 2.0.2
+description: RFlutter Alert is super customizable and easy-to-use alert/popup dialogs for Flutter. You may create reusable alert styles or add buttons as much as you want with ease.
+version: 1.0.3
+author: Ratel <rflutter@ratel.com.tr>
 homepage: https://github.com/RatelHub/rflutter_alert
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  matrix4_transform: ^2.0.0
-
+  matrix4_transform: ^1.1.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+    
 flutter:
   assets:
     - assets/images/
